# ash-boot

./: .gitignore  Features.md  README.md  build.bat  build.sh  llvm_build_commands.txt  sample_program.txt
stage-0-compiler/: .clang-format  CMakeLists.txt  CMakeSettings.json
stage-0-compiler/source/: cli.cpp  cli.h  cli_parser.cpp  cli_parser.h  config.h  json.cpp  json.h  main.cpp  utils.h
stage-0-compiler/source/ast/: ast.cpp  ast.h  builder.cpp  builder.h  constant_checker.cpp  constant_checker.h  mangler.cpp  mangler.h  module.cpp  module.h  module_manager.cpp  module_manager.h  operators.cpp  operators.h  parser.cpp  parser.h  scope_checker.cpp  scope_checker.h  string_manager.cpp  string_manager.h  type_checker.cpp  type_checker.h  types.cpp  types.h
stage-0-compiler/source/ast/mangler/: ManglerV1.cpp  ManglerV1.h  ManglerV2.cpp  mangler_v1.cpp  mangler_v2.cpp  mangler_v2.h
